testIntegerCache